@@ -1,3 +1,7 @@
+2000-08-01  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Dead bodies decay after several game-clock hours.
+
 2000-08-01  Tristan Tarrant  <tarrant_tristan@emc.com>
 
 	* game.h, gamewin.cc: if in BG we show ENDSHAPE.FLX, if in SI we show 
